# parking-go

./: .dockerignore  .gitignore  Dockerfile  README.md  api_definition.yaml  docker-compose.yaml  forms.py  main.py  models.py  mypy.ini  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: ci.yaml
database/: parking.db
templates/: base.html  home.html  login.html  manage_lots.html  my_reservation.html  register.html  reservation_history.html  reserve.html
templates/admin/: add_lot.html  dashboard.html  edit_lot.html  manage_lots.html  manage_reservations.html  manage_users.html  view_lot_details.html
templates/errors/: 404.html  500.html
