[project]
name = "parking-go"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "types-flask>=1.1.6",
    "types-flask-sqlalchemy>=2.5.9.4",
    "types-wtforms>=3.2.1.20250602",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.0",
    "ruff>=0.12.7",
]
